# ronin

./: .coveragerc  .gitignore  .ronin_history  CLAUDE.md  README.md  agent.py  chat_mode.py  cli.py  exceptions.py  langsmith_tracer.py  logging_config.py  plan.md  prompts.py  pyproject.toml  pytest.ini  secrets_manager.py  tool_executor.py  tool_registry.py  tools.py  utils.py
.github/workflows/: test.yml
ronin/: __init__.py
tests/: README.md
tests/integration/: test_chat_session.py
tests/unit/: test_claude_api_mock.py  test_tools.py
