[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ronin-agent"
version = "0.1.0"
description = "Minimal CLI LLM agent"
authors = [
    { name = "Ben Reeve", email = "ben@reeve.one" }
]
dependencies = ["anthropic>=0.29"]

[project.optional-dependencies]
tracing = ["langsmith>=0.1.0"]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
all = ["langsmith>=0.1.0", "pytest>=7.4.0", "pytest-cov>=4.1.0", "pytest-mock>=3.11.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
Ronin = "cli:main"

[tool.setuptools]
py-modules = ["agent", "cli", "tools", "chat_mode", "tool_registry", "prompts", "tool_executor", "exceptions", "logging_config", "secrets_manager", "langsmith_tracer", "utils"]